chore: migrate from ktlint to ktfmt